--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
- alembic==1.7.6
+alembic==1.7.6
 BareNecessities==0.2.8
 blinker==1.4
-click==8.0.3
+click==7.1.2
 dominate==2.6.0
 Flask==1.1.4
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-Migrate==3.1.0
+Flask-Migrate==2.6.0
 Flask-Script==2.0.6
 Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.5.1
 Flask-Uploads==0.2.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.10.1
 importlib-resources==5.4.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
+itsdangerous==2.0
+Jinja2==2.11.3
 Mail==2.1.0
 Mako==1.1.6
 MarkupSafe==2.0.1
