--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ greenlet==1.1.2
 gunicorn==20.1.0
 importlib-metadata==4.10.1
 importlib-resources==5.4.0
-itsdangerous==2.0
+itsdangerous<2.0
 Jinja2==2.11.3
 Mail==2.1.0
 Mako==1.1.6
