--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.7.6
 BareNecessities==0.2.8
 blinker==1.4
 click==7.1.2
+dnspython==2.2.0
 dominate==2.6.0
+email-validator==1.1.3
 Flask==1.1.4
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
@@ -15,14 +17,16 @@ Flask-Uploads==0.2.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.10.1
 importlib-resources==5.4.0
-itsdangerous<2.0
+itsdangerous==1.1.0
 Jinja2==2.11.3
 Mail==2.1.0
 Mako==1.1.6
 MarkupSafe==2.0.1
 migrate==0.3.8
+psycopg2-binary==2.9.3
 SQLAlchemy==1.4.31
 visitor==0.1.3
 Werkzeug==0.16.0
